tests/buildstructor/fail/duplicate.stderr
error[E0599]: no method named `simple` found for struct `__FooBuilder<(__Set<String>,)>` in the current scope
  --> tests/buildstructor/fail/duplicate.rs:15:40
   |
6  | #[buildstructor]
   | ---------------- method `simple` not found for this struct
...
15 |     let _ = Foo::builder().simple("3").simple("3").build();
   |                                        ^^^^^^ method not found in `__FooBuilder<(__Set<String>,)>`
   |
   = note: the method was found for
           - `__FooBuilder<(__Required<String>,)>`
